updated public codebase